[package]
name = "mut-elems"
version = "0.2.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2021"
description = "Get simultaneous mutable access to multiple elements of a mutable array, slice or `Vec`."
license-file = "LICENSE.txt"
repository = "https://github.com/BartMassey/mut-elems"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["borrow", "mut"]

[dependencies]
thiserror = "1.0.37"

[dev-dependencies]
version-sync = "0.9.4"

[lib]
name = "mut_elems"
path = "mut_elems.rs"

[badges.maintenance]
status = "actively-developed"
